@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Added an inline_coercion method to Specio constraints.
+
+
 0.34     2017-01-29
 
 - Packages with Specio::Exporter as their parent can now specify additional
